@@ -107,7 +107,7 @@ struct vtun_host {
 
    /* Keep Alive */
    int ka_interval;
-   int ka_failure;
+   int ka_maxfail;
 
    /* Source address */
    struct vtun_addr src_addr;
