@@ -130,6 +130,10 @@
 #    keepalive - Enable 'yes' or disable 'no' connection
 #	keep-alive. Ignored by the client.
 #
+#	May be in the form 'interval:count', where 'interval' is the
+#	period of connection checks and 'count' is the maximum number
+#	of retries. 'yes' is equivalent to '30:4'.
+#
 # -----------
 #    timeout - Connect timeout. 
 #
