@@ -3,7 +3,12 @@
 	rfe2149137 - makefile ignores LDFLAGS (sbk)
 	rfe2405993 - mem leak in config parser (frY)
 	rfe1685781 - vtun3 server should offer vtun2-compatible encryption (if)
-	rfe3540779 - Parallel make Makefile.in race condition (pb)
+	pat3540779 - Parallel make Makefile.in race condition (pb)
+	pat2972369 - link timeout in UDP mode (Eugene Berdnikov - deb339364)
+ 	             Minor fixes in lfd_lzo.c to ensure correct type casting
+ 	             Add description of "keepalive timeout:count;" syntax
+	              to man page and vtund.conf sample.
+ 	             Remove doubled if(send_a_file){...} block in linkfd.c.
 	
 3.0.2:
 	rfe1685781 - vtun3 client should parse vtun2 server encr directives (hch)
